// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render action button 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c10 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c10 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c7 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem;
  border-radius: 0.8rem;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7,
.c7 .c8,
.c7 .c2,
.c7 .c2 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c7:hover {
  cursor: pointer;
}

.c7:focus {
  outline: none;
}

.c7:disabled {
  cursor: not-allowed;
}

.c7::after {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  bottom: 0.85rem;
  left: 50%;
  height: 0.15rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0.15rem;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
}

.c7:disabled {
  color: #98A7B7;
}

.c7:disabled::after {
  background-color: #98A7B7;
}

.c7:disabled .c2 * {
  fill: #98A7B7;
}

.c7:not(:disabled):not(:hover) {
  color: #3872D2;
}

.c7:not(:disabled):not(:hover)::after {
  background-color: #3872D2;
}

.c7:not(:disabled):not(:hover) .c2 * {
  fill: #3872D2;
}

.c7:not(:disabled):active {
  color: #275093;
}

.c7:not(:disabled):active::after {
  background-color: #275093;
}

.c7:not(:disabled):active .c2 * {
  fill: #275093;
}

.c7:not(:disabled):active::after {
  width: calc(100% - 4.8rem);
}

.c7:not(:disabled):not(:active):hover {
  color: #3061B3;
}

.c7:not(:disabled):not(:active):hover::after {
  background-color: #3061B3;
}

.c7:not(:disabled):not(:active):hover .c2 * {
  fill: #3061B3;
}

.c7:not(:disabled):not(:active):hover::after {
  width: calc(100% - 4.8rem);
}

.c7 .c2 + .c8 {
  margin-left: 0.8rem;
}

.c7 .c8 + .c2 {
  margin-left: 0.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #1E864E;
  min-width: 25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #E8F3ED;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #1E864E;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c5 .c6 {
  padding-top: 0.5rem;
}

.c5 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c5 .c2 * {
  fill: #13181D;
}

.c5 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 103.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    >
      <button
        class="c6 c7"
        label="Action 1"
        type="button"
      >
        <span
          class="c8 c9"
        >
          Action 1
        </span>
      </button>
      <svg
        class="c2 c10"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Toast should render custom icons 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c6 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c6 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #1E864E;
  min-width: 25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #E8F3ED;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #1E864E;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c5 .sc-1k2druj-0 {
  padding-top: 0.5rem;
}

.c5 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c5 .c2 * {
  fill: #13181D;
}

.c5 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 103.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    >
      <svg
        class="c2 c6"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Toast should render header and message text 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c8 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c8 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #1E864E;
  min-width: 25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #E8F3ED;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #1E864E;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c7 .sc-1k2druj-0 {
  padding-top: 0.5rem;
}

.c7 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c7 .c2 * {
  fill: #13181D;
}

.c7 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 103.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      <span
        class="c5"
      >
        Heading 1
      </span>
      <span
        class="c6"
      >
        Info message
      </span>
    </div>
    <div
      class="c7"
    >
      <svg
        class="c2 c8"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with error variant 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c6 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c6 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #D73A43;
  min-width: 25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FBEBEC;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #D73A43;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c5 .sc-1k2druj-0 {
  padding-top: 0.5rem;
}

.c5 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c5 .c2 * {
  fill: #13181D;
}

.c5 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 103.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 11c-.55 0-1-.45-1-1V8c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm-1 2v2h2v-2h-2z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    >
      <svg
        class="c2 c6"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with fullWidth prop 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c7 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c7 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #1E864E;
  min-width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #E8F3ED;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #1E864E;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c6 .sc-1k2druj-0 {
  padding-top: 0.5rem;
}

.c6 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c6 .c2 * {
  fill: #13181D;
}

.c6 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 100%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 100%;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
    <div
      class="c4"
    >
      <span
        class="c5"
      >
        Info message
      </span>
    </div>
    <div
      class="c6"
    >
      <svg
        class="c2 c7"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with info variant 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c6 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c6 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #3872D2;
  min-width: 25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EBF1FA;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #3872D2;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c5 .sc-1k2druj-0 {
  padding-top: 0.5rem;
}

.c5 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c5 .c2 * {
  fill: #13181D;
}

.c5 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 103.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.001 10.75v5l1.29 1.29c.63.63.18 1.71-.71 1.71H5.411c-.89 0-1.33-1.08-.7-1.71l1.29-1.29v-5c0-3.08 1.63-5.64 4.5-6.32v-.68c0-.83.67-1.5 1.5-1.5s1.5.67 1.5 1.5v.68c2.86.68 4.5 3.25 4.5 6.32zm-4 9a2 2 0 1 1-4 0h4z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    >
      <svg
        class="c2 c6"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with success variant 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c6 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c6 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #1E864E;
  min-width: 25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #E8F3ED;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #1E864E;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c5 .sc-1k2druj-0 {
  padding-top: 0.5rem;
}

.c5 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c5 .c2 * {
  fill: #13181D;
}

.c5 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 103.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
          fill="green"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    >
      <svg
        class="c2 c6"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with warning variant 1`] = `
.c3 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c3 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c6 {
  overflow: visible;
  font-size: 1.6rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: pointer;
  padding: 0.8rem;
  border-radius: 50%;
  background-color: #EBF1FA;
}

.c6 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-shadow: 0 0.8rem 3.2rem #b0bcc8;
  border-radius: 0.4rem;
  border-left: 0.4rem solid #FBD94F;
  min-width: 25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #FEF7DC;
}

.c1 .c2 {
  padding: 1.2rem;
}

.c1 .c2 * {
  fill: #FBD94F;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #ffffff;
  padding: 1.3rem 1.6rem;
  color: #303C48;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffffff;
  padding: 0.8rem 0.8rem 0 0;
}

.c5 .sc-1k2druj-0 {
  padding-top: 0.5rem;
}

.c5 .c2 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
}

.c5 .c2 * {
  fill: #13181D;
}

.c5 .c2:hover {
  background-color: #eff2f4;
}

@media (min-width:768px) and (max-width:1439px) {
  .c0 {
    max-width: 72%;
  }
}

@media (min-width:1440px) {
  .c0 {
    max-width: 103.6rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        class="c2 c3"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.47 20.504c-1.54 0-2.5-1.67-1.73-3l7.53-13.01c.77-1.33 2.69-1.33 3.46 0l7.53 13.01c.77 1.33-.19 3-1.73 3H4.47zm15.06-2L12 5.494l-7.53 13.01h15.06zm-8.53-8v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zm2 7v-2h-2v2h2z"
          fill="#000"
          fill-opacity=".54"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
    >
      <svg
        class="c2 c6"
        fill="none"
        height="1em"
        variant="solid"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
</div>
`;
